--- a/index.html
+++ b/index.html
@@ -91,6 +91,159 @@
         </div>
       </div>
     </div>
+
+    <div class="review">
+      <div class="review__header">
+        <figure>
+          <img class="review__img" src="https://placeimg.com/640/480/people" alt="">
+        </figure>
+        <div class="review__header-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53">
+            <defs />
+            <path fill="#ef8903" d="M51 26.5c0 7-3.6 12.8-7.9 17.5s-10.1 8.5-17 8.5-12.5-3.7-17-8.5A25.7 25.7 0 012 26.5c0-7 2.1-13.6 6.4-18.2A24.3 24.3 0 0126.1.5C33 .5 39.9 3 44.3 7.9S51 19.5 51 26.5" />
+            <path fill="#fff" d="M31.8 25.8l-9-7h-.5a.5.5 0 00-.3.5v14c0 .2.1.4.3.4h.5l9-7a.8.8 0 00.2-.4.5.5 0 00-.2-.5z" />
+          </svg>
+        </div>
+      </div>
+      <div class="review__content">
+        <h2 class="review__user">Zach</h2>
+        <p class="review__descript">"I travel a lot for work, sometimes across time zones, so I need to do all that I can to help my immune system. VeggieShake is great for that."</p>
+      </div>
+      <div class="review__details">
+        <h3 class="review__title">VeggieShake helped Alice with...</h3>
+        <div class="review__detail">
+          <div class="review__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <defs />
+              <path fill="#EF8903" fill-rule="evenodd" d="M18.858 13.851c-1.891-1.808-3.036-3.501-6.61-3.501-2.173 0-3.73.883-5.066 1.967-.17.187-.336.377-.499.57-.313.368-.62.74-.926 1.118-.305.377-.606.761-.937 1.128.205-.447.443-.877.71-1.29.267-.413.558-.811.88-1.186.07-.082.143-.162.217-.242.888-2.528.951-5.045.839-5.747l2.25-1.87c.597-.238-.395-1.07-.873-1.128 0 0 .388-.475.275-1.05-.034-.175-.214-.467-.982-1.127C7.446.9 6.489.9 6.489.9c-.956 0-1.413.615-2.13 1.564-.717.95-.262 1.681.22 3.223C2.482 9.223.497 11.607.458 16.354.448 17.368 0 17.856 0 18.272c0 .415.538 1.31 1.076 1.31.537 0 7.96.236 12.196.217 2.296-.01 4.04-.954 5.43-2.142.362-.31.618-.724.743-1.182l.07-.256a2.398 2.398 0 00-.657-2.368" />
+            </svg>
+          </div>
+          <span>Energy</span>
+        </div>
+        <div class="review__detail">
+          <div class="review__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17">
+              <defs />
+              <path fill="#EF8903" fill-rule="evenodd" d="M1.837 14.232c4.948 5.293 8.596 1.533 12.346.619 1.611-3.635 5.166-7.107.496-12.66-3.412-4.055-7.066-1.454-9.181-.313C4.673 2 4.02.985 3.888.655c0 0-.438.569-.304.984 0 0-.778-.476-1.25-.51 0 0-.059.595.388.968 0 0-.64-.224-.956-.115 0 0 .112.526.377.69 0 0-.423-.11-.744.126 0 0 .997.96.938 1.816-1.135 1.991-4.347 5.504-.5 9.618" />
+            </svg>
+          </div>
+          <span>Nutrition</span>
+        </div>
+      </div>
+      <div class="review__product">
+        <h3 class="review__title">Accomplished with…</h3>
+        <div class="review__product-wrap">
+          <div class="review__product-image">
+            <figure class="review__product-image-figure">
+              <img class="review__product-image-img" src="https://m.media-amazon.com/images/I/71m69nuWSPL._AC_SY879_PIbundle-2,TopRight,0,0_SH20_.jpg" alt="">
+            </figure>
+          </div>
+          <div class="review__product-info">
+            <span class="review__product-name">Shop Green Almighty All-In-One</span>
+            <span>40$</span>
+            <div class="review__product-rating">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <span class="review__product-rating-count text-green">(40)</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="review">
+      <div class="review__header">
+        <figure>
+          <img class="review__img" src="https://placeimg.com/640/480/people" alt="">
+        </figure>
+        <div class="review__header-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 53 53">
+            <defs />
+            <path fill="#ef8903" d="M51 26.5c0 7-3.6 12.8-7.9 17.5s-10.1 8.5-17 8.5-12.5-3.7-17-8.5A25.7 25.7 0 012 26.5c0-7 2.1-13.6 6.4-18.2A24.3 24.3 0 0126.1.5C33 .5 39.9 3 44.3 7.9S51 19.5 51 26.5" />
+            <path fill="#fff" d="M31.8 25.8l-9-7h-.5a.5.5 0 00-.3.5v14c0 .2.1.4.3.4h.5l9-7a.8.8 0 00.2-.4.5.5 0 00-.2-.5z" />
+          </svg>
+        </div>
+      </div>
+      <div class="review__content">
+        <h2 class="review__user">Mike</h2>
+        <p class="review__descript">"While its clear that diet is the best way to get nutrients we need, sometimes that’s easier said than done. Calcium and vitamin D are too important to me to risk not getting enough, so a trusted daily supplement is my little insurance policy."</p>
+      </div>
+      <div class="review__details">
+        <h3 class="review__title">VeggieShake helped Alice with...</h3>
+        <div class="review__detail">
+          <div class="review__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <defs />
+              <path fill="#EF8903" fill-rule="evenodd" d="M18.858 13.851c-1.891-1.808-3.036-3.501-6.61-3.501-2.173 0-3.73.883-5.066 1.967-.17.187-.336.377-.499.57-.313.368-.62.74-.926 1.118-.305.377-.606.761-.937 1.128.205-.447.443-.877.71-1.29.267-.413.558-.811.88-1.186.07-.082.143-.162.217-.242.888-2.528.951-5.045.839-5.747l2.25-1.87c.597-.238-.395-1.07-.873-1.128 0 0 .388-.475.275-1.05-.034-.175-.214-.467-.982-1.127C7.446.9 6.489.9 6.489.9c-.956 0-1.413.615-2.13 1.564-.717.95-.262 1.681.22 3.223C2.482 9.223.497 11.607.458 16.354.448 17.368 0 17.856 0 18.272c0 .415.538 1.31 1.076 1.31.537 0 7.96.236 12.196.217 2.296-.01 4.04-.954 5.43-2.142.362-.31.618-.724.743-1.182l.07-.256a2.398 2.398 0 00-.657-2.368" />
+            </svg>
+          </div>
+          <span>Energy</span>
+        </div>
+        <div class="review__detail">
+          <div class="review__icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17">
+              <defs />
+              <path fill="#EF8903" fill-rule="evenodd" d="M1.837 14.232c4.948 5.293 8.596 1.533 12.346.619 1.611-3.635 5.166-7.107.496-12.66-3.412-4.055-7.066-1.454-9.181-.313C4.673 2 4.02.985 3.888.655c0 0-.438.569-.304.984 0 0-.778-.476-1.25-.51 0 0-.059.595.388.968 0 0-.64-.224-.956-.115 0 0 .112.526.377.69 0 0-.423-.11-.744.126 0 0 .997.96.938 1.816-1.135 1.991-4.347 5.504-.5 9.618" />
+            </svg>
+          </div>
+          <span>Nutrition</span>
+        </div>
+      </div>
+      <div class="review__product">
+        <h3 class="review__title">Accomplished with…</h3>
+        <div class="review__product-wrap">
+          <div class="review__product-image">
+            <figure class="review__product-image-figure">
+              <img class="review__product-image-img" src="https://m.media-amazon.com/images/I/71m69nuWSPL._AC_SY879_PIbundle-2,TopRight,0,0_SH20_.jpg" alt="">
+            </figure>
+          </div>
+          <div class="review__product-info">
+            <span class="review__product-name">Shop Green Almighty All-In-One</span>
+            <span>40$</span>
+            <div class="review__product-rating">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18">
+                <defs />
+                <path fill="#ffba1f" d="M9.5.3c1.2 2.5 1.1 2.6 2.2 5a1.2 1.2 0 00.7.5l5.2.7c.5.1.5.4.2.8L14 11.2c-.1.1-.1.5-.1.7l.8 5.5q.2.8-.6.3c-2.3-1.3-2.5-.8-4.8-2.1-.2-.1-.5-.5-.7-.4l-4.5 2.7a.6.6 0 01-.9-.6c.5-2.7.2-2.7.7-5.4 0-.2.4-.7.3-.8-1.9-2-2.1-1.8-4-3.7C-.1 7 0 6.2.5 6.2c2.6-.4 2.6.1 5.2-.3l.7-.5c1.2-2.5 1.1-2.5 2.3-5 .2-.5.6-.6.8-.1" data-name="Review-Star-/-Desktop-/-Yellow" />
+              </svg>
+              <span class="review__product-rating-count text-green">(40)</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
